:bug: Fix being able to select game canvas on iOS browsers

--- a/src/ct.release/ct.css
+++ b/src/ct.release/ct.css
@@ -17,6 +17,8 @@ html, body {
     width: 100%;
     height: 100%;
     line-height: 0;
+    -webkit-user-select: none;
+    user-select: none;
 }
 .ct-aLoadingScreen {
     position: absolute;
@@ -106,6 +108,8 @@ html, body {
     color: #360000;
     margin-top: 0.5rem;
     cursor: text;
+    -webkit-user-select: text;
+    user-select: text;
 }
 .ct-Errors button {
     padding: 0.35em 0.75em;
